MTX-347
Correction after PR review